--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </ul>
       </p>
       <p>
-        To see more, visit my <a href="https://www.linkedin.com/in/paul-garmash/">LinkedIn</a> page.
+        To see more, visit my <a href="https://www.linkedin.com/in/paul-garmash/" target="_blank">LinkedIn</a> page.
       </p>
       <!-- TODO: Add badges below -->
       <div class="row my-5">
